# shoeinn

./: .dockerignore  .gitignore  README.md  requirements.txt
apps/api/: .env.example  .env.staging.example  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  tmp-seed-err.txt  tmp-seed-out.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_holds_and_slots.py  19836631c0f5_merge_heads_9cfb25042512_and_.py  2024_add_cancelled_to_appointmentstatus.py  2025_add_full_name_and_notification_read.py  2e113a426fb1_recreate_core_tables_from_models.py  3b8d2f1ef4d4_add_payment_fields_to_appointments.py  (+27 more)
apps/api/app/: enums.py  main.py
apps/api/docs/: cqrs.md
apps/api/scripts/: seed_services.py
apps/api/tests/: conftest.py  test_admin.py  test_appointments.py  test_appointments_concurrency.py  test_assignment_claiming.py  test_availability.py  test_booking_quote.py  test_customer_notifications.py  test_dev_seed.py  test_flow.py  test_hold_confirm.py  test_hold_creation.py  test_notification_preferences.py  test_notifications.py  test_payment_gateway.py  test_payment_return.py  test_premium_care_marketplace_flows.py  test_services.py  test_tracking.py  test_user_profile_address.py
apps/payment/: .env.staging.example  Dockerfile  README.md  payment.db  pyproject.toml
apps/payment/app/: config.py  database.py  main.py  models.py  schemas.py  stripe_client.py
apps/payment/docs/: consuming-payment-events.md
apps/payment/tests/: conftest.py  test_payments.py
(+382 files in other folders)
