[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shoeinn-api"
version = "0.1.0"
description = "API for shoeinn"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "pydantic>=2,<3",
    "python-dotenv",
    "httpx",
    "asgi-lifespan",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["app*", "alembic*"]
