[project]
name = "shoeinn-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "asgi-lifespan",
    "passlib[bcrypt]",
    "PyJWT",
    "email-validator",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
